--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,7 @@
     top: 0;
     width: 100%;
     box-sizing: border-box;
+    z-index: 9999;
 }
 
 .navigation-bar-item {
@@ -102,15 +103,8 @@ li > a {
     font-size: 24px;
 }
 
-input[type=button], input[type=submit], input[type=reset] {
-  background-color: #F6852F;
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  cursor: pointer;
+.div-spacing {
+  margin-top: 30px;
 }
 
 input[type=checkbox] {
@@ -123,4 +117,16 @@ input[type=checkbox] {
   color: white;
   padding: 1em;
   cursor: pointer;
+}
+
+.drop-zone {
+  width: 350px;
+  height: 350px;
+  padding: 10px;
+  border: 1px solid #aaaaaa;
+  background: #555555;
+}
+
+.myButton {
+    margin-right: 20px;
 }
