--- a/static/style.css
+++ b/static/style.css
@@ -120,13 +120,34 @@ input[type=checkbox] {
 }
 
 .drop-zone {
-  width: 350px;
-  height: 350px;
-  padding: 10px;
-  border: 1px solid #aaaaaa;
-  background: #555555;
+    width: 350px;
+    height: 350px;
+    border: 1px solid #aaaaaa;
+    background: #555555;
 }
 
 .myButton {
     margin-right: 20px;
+}
+
+.block:before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
+}
+
+.inner {
+    display: inline-block;
+    vertical-align: middle;
+    width: 50%;
+}
+
+.inner-input {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.spacing {
+    margin-bottom: 50px;
 }
