--- a/static/style.css
+++ b/static/style.css
@@ -80,6 +80,7 @@ li > a {
     padding: 7%;
     width: 100%;
     box-sizing: border-box;
+    height: 3000px;
 }
 
 .spreadsheet {
@@ -120,10 +121,17 @@ input[type=checkbox] {
 }
 
 .drop-zone {
-    width: 350px;
-    height: 350px;
-    border: 1px solid #aaaaaa;
-    background: #555555;
+    width: 100%;
+    height: 150px;
+    border: 2px solid black;
+    background: lightgrey;
+}
+
+.div-container {
+    width: 100%;
+    height: 200px;
+    border: 2px solid black;
+    overflow-y:scroll;
 }
 
 .myButton {
@@ -150,4 +158,22 @@ input[type=checkbox] {
 
 .spacing {
     margin-bottom: 50px;
+}
+
+/* HIDE RADIO */
+[type=radio] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* IMAGE STYLES */
+[type=radio] + img {
+  cursor: pointer;
+}
+
+/* CHECKED STYLES */
+[type=radio]:checked + img {
+  outline: 4px solid dodgerblue;
 }
