--- a/static/style.css
+++ b/static/style.css
@@ -134,6 +134,12 @@ input[type=checkbox] {
     overflow-y:scroll;
 }
 
+.div-chart-type {
+    width: 100%;
+    height: 150px;
+    border: 2px solid black;
+}
+
 .myButton {
     margin-right: 20px;
 }
@@ -176,4 +182,17 @@ input[type=checkbox] {
 /* CHECKED STYLES */
 [type=radio]:checked + img {
   outline: 4px solid dodgerblue;
+}
+
+.searchInput {
+  background-image: url('search-icon.png'); /* Add a search icon to input */
+  background-size: 8% 25px;
+  background-position: 5px 12px; /* Position the search icon */
+  background-repeat: no-repeat; /* Do not repeat the icon image */
+  width: 100%; /* Full-width */
+  font-size: 16px; /* Increase font-size */
+  padding: 10px 20px 10px 50px; /* Add some padding */
+  border-radius: 25px;
+  border: 2px solid black; /* Add a grey border */
+  margin-bottom: 12px; /* Add some space below the input */
 }
